--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
     <section id="hd">
       <div class="hd__main">
-        <div class="hd__wrapper">
-          <div id="hd__btnMenu">
+        <div id="hd__btnMenu">
+          <span class="hd__btnMenu-iconWrapper">
             <!-- Icon Menu -->
             <!-- Icon Menu -->
             <svg
@@ -37,80 +37,217 @@
               ></path>
             </svg>
             <!-- Icon Menu -->
-            <!-- Icon Menu -->
-            <span>Menu</span>
+            <!-- Icon Menu --></span
+          >
+          <span class="hd__btnMenu-text">Menu</span>
+        </div>
+
+        <img
+          id="hd__logo"
+          width="532"
+          height="104"
+          src="assets/logo.png"
+          sizes="(max-width: 532px) 100vw, 532px"
+        />
+
+        <div class="hd__contact">
+          <div class="hd__contact-item">
+            <a class="hd__contact-icon" href="tel:+1704-565-9252">
+              <!-- Icon Phone -->
+              <!-- Icon Phone -->
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="34"
+                height="33"
+                viewBox="0 0 34 33"
+                fill="none"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M9.59224 3.30879C9.20448 2.38786 8.26067 2.00469 7.51526 2.31078C5.57416 3.10786 3.51399 4.39101 2.61788 6.40726C2.23104 7.27764 2.10536 8.56891 2.27212 10.1863C2.43644 11.78 2.87265 13.5778 3.49338 15.3805C4.74639 19.0192 6.67701 22.4692 8.39047 24.1827C10.7473 26.5397 13.9654 28.3605 17.2109 29.4553C20.4747 30.5563 23.6278 30.8772 25.8493 30.3864C28.5816 29.7827 30.3156 27.4099 31.0968 25.5017C31.1946 25.2627 31.1724 25.0455 31.0577 24.8362C30.9323 24.6075 30.681 24.3726 30.3184 24.2275L23.2081 21.3834C22.9262 21.2706 22.6065 21.3076 22.3577 21.4817L19.141 23.7334C18.2865 24.3316 17.1734 24.4807 16.1832 24.0834C15.8833 23.9631 15.5435 23.8219 15.1826 23.661C12.3174 22.3838 10.4923 19.8212 9.11337 17.3648C8.61262 16.4728 8.65459 15.3753 9.22202 14.5242L12.0748 10.2449C12.2424 9.99356 12.2727 9.67488 12.1555 9.39645L9.59224 3.30879ZM6.67958 0.275675C8.71659 -0.560792 10.8404 0.603834 11.6198 2.45506L14.1831 8.54273C14.5869 9.50177 14.4826 10.5994 13.9054 11.4653L11.0525 15.7445C10.944 15.9073 10.936 16.1172 11.0317 16.2879C12.3602 18.6543 13.892 20.677 16.0783 21.6516C16.4078 21.7985 16.7211 21.9287 17.0024 22.0416C17.2811 22.1534 17.6139 22.117 17.8794 21.9311L21.0961 19.6794C21.9529 19.0797 23.0542 18.9524 24.0252 19.3407L31.1355 22.1849C32.6379 22.7858 33.9042 24.4506 33.1328 26.3351C32.2243 28.5544 30.068 31.7074 26.3239 32.5346C23.5716 33.1427 19.9875 32.7137 16.5078 31.5399C13.0097 30.36 9.47774 28.3813 6.83481 25.7383C4.79003 23.6934 2.72067 19.8934 1.41326 16.0968C0.753787 14.1817 0.269674 12.2154 0.0837263 10.412C-0.0997716 8.6323 -0.00567132 6.89337 0.607493 5.51375C1.858 2.70011 4.59089 1.13336 6.67958 0.275675Z"
+                  fill="#B09245"
+                ></path>
+              </svg>
+              <!-- Icon Phone -->
+              <!-- Icon Phone -->
+            </a>
+            <a class="hd__contact-text" href="tel:+1704-565-9252"
+              >704-565-9252</a
+            >
           </div>
-
-          <img
-            id="hd__logo"
-            width="532"
-            height="104"
-            src="assets/logo.png"
-            sizes="(max-width: 532px) 100vw, 532px"
-          />
-
-          <div class="hd__contact">
-            <div class="hd__contact-item">
-              <a class="hd__contact-icon" href="tel:+1704-565-9252">
-                <!-- Icon Phone -->
-                <!-- Icon Phone -->
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="34"
-                  height="33"
-                  viewBox="0 0 34 33"
-                  fill="none"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M9.59224 3.30879C9.20448 2.38786 8.26067 2.00469 7.51526 2.31078C5.57416 3.10786 3.51399 4.39101 2.61788 6.40726C2.23104 7.27764 2.10536 8.56891 2.27212 10.1863C2.43644 11.78 2.87265 13.5778 3.49338 15.3805C4.74639 19.0192 6.67701 22.4692 8.39047 24.1827C10.7473 26.5397 13.9654 28.3605 17.2109 29.4553C20.4747 30.5563 23.6278 30.8772 25.8493 30.3864C28.5816 29.7827 30.3156 27.4099 31.0968 25.5017C31.1946 25.2627 31.1724 25.0455 31.0577 24.8362C30.9323 24.6075 30.681 24.3726 30.3184 24.2275L23.2081 21.3834C22.9262 21.2706 22.6065 21.3076 22.3577 21.4817L19.141 23.7334C18.2865 24.3316 17.1734 24.4807 16.1832 24.0834C15.8833 23.9631 15.5435 23.8219 15.1826 23.661C12.3174 22.3838 10.4923 19.8212 9.11337 17.3648C8.61262 16.4728 8.65459 15.3753 9.22202 14.5242L12.0748 10.2449C12.2424 9.99356 12.2727 9.67488 12.1555 9.39645L9.59224 3.30879ZM6.67958 0.275675C8.71659 -0.560792 10.8404 0.603834 11.6198 2.45506L14.1831 8.54273C14.5869 9.50177 14.4826 10.5994 13.9054 11.4653L11.0525 15.7445C10.944 15.9073 10.936 16.1172 11.0317 16.2879C12.3602 18.6543 13.892 20.677 16.0783 21.6516C16.4078 21.7985 16.7211 21.9287 17.0024 22.0416C17.2811 22.1534 17.6139 22.117 17.8794 21.9311L21.0961 19.6794C21.9529 19.0797 23.0542 18.9524 24.0252 19.3407L31.1355 22.1849C32.6379 22.7858 33.9042 24.4506 33.1328 26.3351C32.2243 28.5544 30.068 31.7074 26.3239 32.5346C23.5716 33.1427 19.9875 32.7137 16.5078 31.5399C13.0097 30.36 9.47774 28.3813 6.83481 25.7383C4.79003 23.6934 2.72067 19.8934 1.41326 16.0968C0.753787 14.1817 0.269674 12.2154 0.0837263 10.412C-0.0997716 8.6323 -0.00567132 6.89337 0.607493 5.51375C1.858 2.70011 4.59089 1.13336 6.67958 0.275675Z"
-                    fill="#B09245"
-                  ></path>
-                </svg>
-                <!-- Icon Phone -->
-                <!-- Icon Phone -->
-              </a>
-              <a class="hd__contact-text" href="tel:+1704-565-9252"
-                >704-565-9252</a
+          <div class="hd__contact-item">
+            <a
+              class="hd__contact-icon"
+              href="https://copperbuilddev.wpengine.com/contact-us"
+            >
+              <!-- Icon Email -->
+              <!-- Icon Email -->
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="36"
+                height="27"
+                viewBox="0 0 36 27"
+                fill="none"
               >
-            </div>
-            <div class="hd__contact-item">
-              <a
-                class="hd__contact-icon"
-                href="https://copperbuilddev.wpengine.com/contact-us"
-              >
-                <!-- Icon Email -->
-                <!-- Icon Email -->
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="36"
-                  height="27"
-                  viewBox="0 0 36 27"
-                  fill="none"
-                >
-                  <path
-                    d="M32.0175 24.8H32.1381L32.0529 24.7147L23.9544 16.605L25.47 15.0895L33.7146 23.3341L33.8 23.4195V23.2987V3.61125V3.49101L33.7147 3.5758L19.371 17.8408C18.9588 18.2505 18.4012 18.4805 17.82 18.4805C17.2388 18.4805 16.6812 18.2505 16.269 17.8408L2.28527 3.92456L2.2 3.8397V3.96V23.445V23.5687L2.28595 23.4797L10.3737 15.1119L11.9218 16.6062L4.08155 24.7152L3.99961 24.8H4.1175H32.0175ZM3.72375 2.2H3.60263L3.68848 2.28544L17.7847 16.3142L17.82 16.3493L17.8553 16.3142L31.9628 2.28545L32.0487 2.2H31.9275H3.72375ZM2.25 0.05H33.75C34.3335 0.05 34.8931 0.281785 35.3056 0.694365C35.7182 1.10694 35.95 1.66652 35.95 2.25V24.75C35.95 25.3335 35.7182 25.8931 35.3056 26.3056C34.8931 26.7182 34.3335 26.95 33.75 26.95H2.25C1.66652 26.95 1.10695 26.7182 0.694365 26.3056C0.281785 25.8931 0.05 25.3335 0.05 24.75V2.25C0.05 1.66652 0.281785 1.10695 0.694365 0.694365C1.10695 0.281785 1.66652 0.05 2.25 0.05Z"
-                    fill="#B09245"
-                    stroke="white"
-                    stroke-width="0.1"
-                  ></path>
-                </svg>
-                <!-- Icon Email -->
-                <!-- Icon Email -->
-              </a>
-              <a
-                class="hd__contact-text"
-                href="https://copperbuilddev.wpengine.com/contact-us"
-                >Contact Us</a
-              >
-            </div>
+                <path
+                  d="M32.0175 24.8H32.1381L32.0529 24.7147L23.9544 16.605L25.47 15.0895L33.7146 23.3341L33.8 23.4195V23.2987V3.61125V3.49101L33.7147 3.5758L19.371 17.8408C18.9588 18.2505 18.4012 18.4805 17.82 18.4805C17.2388 18.4805 16.6812 18.2505 16.269 17.8408L2.28527 3.92456L2.2 3.8397V3.96V23.445V23.5687L2.28595 23.4797L10.3737 15.1119L11.9218 16.6062L4.08155 24.7152L3.99961 24.8H4.1175H32.0175ZM3.72375 2.2H3.60263L3.68848 2.28544L17.7847 16.3142L17.82 16.3493L17.8553 16.3142L31.9628 2.28545L32.0487 2.2H31.9275H3.72375ZM2.25 0.05H33.75C34.3335 0.05 34.8931 0.281785 35.3056 0.694365C35.7182 1.10694 35.95 1.66652 35.95 2.25V24.75C35.95 25.3335 35.7182 25.8931 35.3056 26.3056C34.8931 26.7182 34.3335 26.95 33.75 26.95H2.25C1.66652 26.95 1.10695 26.7182 0.694365 26.3056C0.281785 25.8931 0.05 25.3335 0.05 24.75V2.25C0.05 1.66652 0.281785 1.10695 0.694365 0.694365C1.10695 0.281785 1.66652 0.05 2.25 0.05Z"
+                  fill="#B09245"
+                  stroke="white"
+                  stroke-width="0.1"
+                ></path>
+              </svg>
+              <!-- Icon Email -->
+              <!-- Icon Email -->
+            </a>
+            <a
+              class="hd__contact-text"
+              href="https://copperbuilddev.wpengine.com/contact-us"
+              >Contact Us</a
+            >
           </div>
         </div>
       </div>
+
+      <div id="hd__menu">
+        <div class="hd__menu-btnConatiner">
+          <div id="hd__menu-btn">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="42"
+              height="40"
+              viewBox="0 0 42 40"
+              fill="none"
+            >
+              <rect width="42" height="40" fill="white"></rect>
+              <path
+                d="M10.836 8.50638C11.1602 8.47797 11.4599 8.57952 11.6691 8.7887L30.5978 27.7174C30.8069 27.9266 30.9085 28.2262 30.8801 28.5505C30.8517 28.8747 30.6956 29.1969 30.4463 29.4463C30.1969 29.6957 29.8747 29.8517 29.5504 29.8801C29.2262 29.9085 28.9265 29.807 28.7174 29.5978L9.78866 10.6691C9.57949 10.4599 9.47794 10.1603 9.50635 9.83603C9.53476 9.5118 9.69081 9.18956 9.94017 8.9402C10.1895 8.69085 10.5118 8.5348 10.836 8.50638Z"
+                fill="#566263"
+              ></path>
+              <path
+                d="M29.5505 8.50638C29.2262 8.47797 28.9266 8.57952 28.7174 8.7887L9.7887 27.7174C9.57953 27.9266 9.47798 28.2262 9.50639 28.5505C9.5348 28.8747 9.69085 29.1969 9.94021 29.4463C10.1896 29.6957 10.5118 29.8517 10.836 29.8801C11.1603 29.9085 11.4599 29.807 11.6691 29.5978L30.5978 10.6691C30.807 10.4599 30.9085 10.1603 30.8801 9.83603C30.8517 9.5118 30.6957 9.18956 30.4463 8.9402C30.1969 8.69085 29.8747 8.5348 29.5505 8.50638Z"
+                fill="#566263"
+              ></path>
+            </svg>
+            <span class="hd__menu-text">Menu</span>
+          </div>
+        </div>
+
+        <ul class="hd__menu-main">
+          <li class="hd__menu-item">
+            <span class="hd__menu-itemTitle"
+              >Our Homes <i class="fas fa-angle-down"></i
+            ></span>
+            <ul class="hd__subMenu">
+              <li>
+                <a href="#" class="hd__subMenu-item">Floor Plans / Models</a>
+              </li>
+              <li>
+                <a href="#" class="hd__subMenu-item"
+                  >Included Features / Standard Finishes</a
+                >
+              </li>
+              <li><a href="#" class="hd__subMenu-item">Gallery</a></li>
+            </ul>
+          </li>
+          <li class="hd__menu-item">
+            <span class="hd__menu-itemTitle"
+              >Where We Build <i class="fas fa-angle-down"></i
+            ></span>
+            <ul class="hd__subMenu">
+              <li>
+                <a href="#" class="hd__subMenu-item">Communities</a>
+              </li>
+              <li><a href="#" class="hd__subMenu-item">On Your Lot</a></li>
+              <li><a href="#" class="hd__subMenu-item">Model Homes</a></li>
+            </ul>
+          </li>
+          <li class="hd__menu-item">
+            <span class="hd__menu-itemTitle"
+              >Building With Coopper <i class="fas fa-angle-down"></i
+            ></span>
+            <ul class="hd__subMenu">
+              <li>
+                <a href="#" class="hd__subMenu-item">Build on Your Lot</a>
+              </li>
+              <li>
+                <a href="#" class="hd__subMenu-item"
+                  >Build Process and Timeline</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hd__subMenu-item">Choosing a Home Site</a>
+              </li>
+              <li><a href="#" class="hd__subMenu-item">Design Studio</a></li>
+              <li><a href="#" class="hd__subMenu-item">Financing</a></li>
+              <li><a href="#" class="hd__subMenu-item">FAQs</a></li>
+            </ul>
+          </li>
+          <li class="hd__menu-item">
+            <span class="hd__menu-itemTitle"
+              >Contact Us <i class="fas fa-angle-down"></i
+            ></span>
+            <ul class="hd__subMenu">
+              <li>
+                <a href="#" class="hd__subMenu-item">Contact Copper</a>
+              </li>
+              <li>
+                <a href="#" class="hd__subMenu-item">Request an Appointment</a>
+              </li>
+              <li>
+                <a href="#" class="hd__subMenu-item">Warranty Request</a>
+              </li>
+              <li>
+                <a href="#" class="hd__subMenu-item">Careers</a>
+              </li>
+            </ul>
+          </li>
+          <li class="hd__menu-item">
+            <span class="hd__menu-itemTitle"
+              >Home Building Resources <i class="fas fa-angle-down"></i
+            ></span>
+            <ul class="hd__subMenu">
+              <li>
+                <a href="#" class="hd__subMenu-item">Blog</a>
+              </li>
+              <li>
+                <a href="#" class="hd__subMenu-item">Tools</a>
+              </li>
+              <li>
+                <a href="#" class="hd__subMenu-item">Guides and Tips</a>
+              </li>
+              <li>
+                <a href="#" class="hd__subMenu-item">Realtors Relations Page</a>
+              </li>
+            </ul>
+          </li>
+          <li class="hd__menu-item">
+            <a href="#" class="hd__menu-itemTitle">Learn About Us</a>
+          </li>
+          <li class="hd__menu-item">
+            <a href="#" class="hd__menu-itemTitle">Our Warranty</a>
+          </li>
+          <li class="hd__menu-item">
+            <a href="#" class="hd__menu-itemTitle">Reviews & Testmonials</a>
+          </li>
+          <li class="hd__menu-item">
+            <a class="hd__menu-itenIcon" href="tel:+1704-565-9252">
+              <i aria-hidden="true" class="fas fa-phone-alt"></i>
+              704-565-9252
+            </a>
+            <a
+              class="hd__menu-itenIcon"
+              href="https://copperbuilddev.wpengine.com/contact-us"
+            >
+              <i aria-hidden="true" class="far fa-envelope"></i>
+              Contact Us
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
 
-    <div class="">
+    <!-- <div class="">
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi velit
         excepturi mollitia omnis unde? Consequuntur ullam nisi, magni, vitae,
@@ -289,6 +426,13 @@
         impedit! Impedit aut nam sunt aperiam vel velit consequatur
         reprehenderit sequi qui.
       </p>
-    </div>
+    </div> -->
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script src="header.js"></script>
   </body>
 </html>
