--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
               <li>
                 <a href="#" class="hd__subMenu-item">Choosing a Home Site</a>
               </li>
-              <li><a href="#" class="hd__subMenu-item">Design Studio</a></li>
+              <li>
+                <a href="#" class="hd__subMenu-item">Design Studio</a>
+              </li>
               <li><a href="#" class="hd__subMenu-item">Financing</a></li>
               <li><a href="#" class="hd__subMenu-item">FAQs</a></li>
             </ul>
@@ -234,144 +236,6 @@
         </ul>
       </div>
     </section>
-    <!-- <section id="hd">
-      <div id="hd__menu">
-        <div class="hd__menu-btnConatiner">
-          <div id="hd__menu-btn">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="42"
-              height="40"
-              viewBox="0 0 42 40"
-              fill="none"
-            >
-              <rect width="42" height="40" fill="white"></rect>
-              <path
-                d="M10.836 8.50638C11.1602 8.47797 11.4599 8.57952 11.6691 8.7887L30.5978 27.7174C30.8069 27.9266 30.9085 28.2262 30.8801 28.5505C30.8517 28.8747 30.6956 29.1969 30.4463 29.4463C30.1969 29.6957 29.8747 29.8517 29.5504 29.8801C29.2262 29.9085 28.9265 29.807 28.7174 29.5978L9.78866 10.6691C9.57949 10.4599 9.47794 10.1603 9.50635 9.83603C9.53476 9.5118 9.69081 9.18956 9.94017 8.9402C10.1895 8.69085 10.5118 8.5348 10.836 8.50638Z"
-                fill="#566263"
-              ></path>
-              <path
-                d="M29.5505 8.50638C29.2262 8.47797 28.9266 8.57952 28.7174 8.7887L9.7887 27.7174C9.57953 27.9266 9.47798 28.2262 9.50639 28.5505C9.5348 28.8747 9.69085 29.1969 9.94021 29.4463C10.1896 29.6957 10.5118 29.8517 10.836 29.8801C11.1603 29.9085 11.4599 29.807 11.6691 29.5978L30.5978 10.6691C30.807 10.4599 30.9085 10.1603 30.8801 9.83603C30.8517 9.5118 30.6957 9.18956 30.4463 8.9402C30.1969 8.69085 29.8747 8.5348 29.5505 8.50638Z"
-                fill="#566263"
-              ></path>
-            </svg>
-            <span class="hd__menu-text">Menu</span>
-          </div>
-        </div>
-
-        <ul class="hd__menu-main">
-          <li class="hd__menu-item">
-            <span class="hd__menu-itemTitle"
-              >Our Homes <i class="fas fa-angle-down"></i
-            ></span>
-            <ul class="hd__subMenu">
-              <li>
-                <a href="#" class="hd__subMenu-item">Floor Plans / Models</a>
-              </li>
-              <li>
-                <a href="#" class="hd__subMenu-item"
-                  >Included Features / Standard Finishes</a
-                >
-              </li>
-              <li><a href="#" class="hd__subMenu-item">Gallery</a></li>
-            </ul>
-          </li>
-          <li class="hd__menu-item">
-            <span class="hd__menu-itemTitle"
-              >Where We Build <i class="fas fa-angle-down"></i
-            ></span>
-            <ul class="hd__subMenu">
-              <li>
-                <a href="#" class="hd__subMenu-item">Communities</a>
-              </li>
-              <li><a href="#" class="hd__subMenu-item">On Your Lot</a></li>
-              <li><a href="#" class="hd__subMenu-item">Model Homes</a></li>
-            </ul>
-          </li>
-          <li class="hd__menu-item">
-            <span class="hd__menu-itemTitle"
-              >Building With Coopper <i class="fas fa-angle-down"></i
-            ></span>
-            <ul class="hd__subMenu">
-              <li>
-                <a href="#" class="hd__subMenu-item">Build on Your Lot</a>
-              </li>
-              <li>
-                <a href="#" class="hd__subMenu-item"
-                  >Build Process and Timeline</a
-                >
-              </li>
-              <li>
-                <a href="#" class="hd__subMenu-item">Choosing a Home Site</a>
-              </li>
-              <li><a href="#" class="hd__subMenu-item">Design Studio</a></li>
-              <li><a href="#" class="hd__subMenu-item">Financing</a></li>
-              <li><a href="#" class="hd__subMenu-item">FAQs</a></li>
-            </ul>
-          </li>
-          <li class="hd__menu-item">
-            <span class="hd__menu-itemTitle"
-              >Contact Us <i class="fas fa-angle-down"></i
-            ></span>
-            <ul class="hd__subMenu">
-              <li>
-                <a href="#" class="hd__subMenu-item">Contact Copper</a>
-              </li>
-              <li>
-                <a href="#" class="hd__subMenu-item">Request an Appointment</a>
-              </li>
-              <li>
-                <a href="#" class="hd__subMenu-item">Warranty Request</a>
-              </li>
-              <li>
-                <a href="#" class="hd__subMenu-item">Careers</a>
-              </li>
-            </ul>
-          </li>
-          <li class="hd__menu-item">
-            <span class="hd__menu-itemTitle"
-              >Home Building Resources <i class="fas fa-angle-down"></i
-            ></span>
-            <ul class="hd__subMenu">
-              <li>
-                <a href="#" class="hd__subMenu-item">Blog</a>
-              </li>
-              <li>
-                <a href="#" class="hd__subMenu-item">Tools</a>
-              </li>
-              <li>
-                <a href="#" class="hd__subMenu-item">Guides and Tips</a>
-              </li>
-              <li>
-                <a href="#" class="hd__subMenu-item">Realtors Relations Page</a>
-              </li>
-            </ul>
-          </li>
-          <li class="hd__menu-item">
-            <a href="#" class="hd__menu-itemTitle">Learn About Us</a>
-          </li>
-          <li class="hd__menu-item">
-            <a href="#" class="hd__menu-itemTitle">Our Warranty</a>
-          </li>
-          <li class="hd__menu-item">
-            <a href="#" class="hd__menu-itemTitle">Reviews & Testmonials</a>
-          </li>
-          <li class="hd__menu-item">
-            <a class="hd__menu-itenIcon" href="tel:+1704-565-9252">
-              <i aria-hidden="true" class="fas fa-phone-alt"></i>
-              704-565-9252
-            </a>
-            <a
-              class="hd__menu-itenIcon"
-              href="https://copperbuilddev.wpengine.com/contact-us"
-            >
-              <i aria-hidden="true" class="far fa-envelope"></i>
-              Contact Us
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section> -->
 
     <div class="">
       <p>
