--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
     />
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="//db.onlinewebfonts.com/c/ab49b5908f0919134482d8934cca5ec8?family=Bell"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link rel="stylesheet" href="header_styles.css" />
   </head>
   <body>
@@ -238,6 +247,7 @@
     </section>
 
     <div class="">
+      mauro
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi velit
         excepturi mollitia omnis unde? Consequuntur ullam nisi, magni, vitae,
